Fixed merge errors